--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -144,6 +144,23 @@ h4.modal-title {position: static; padding:0;}
 .testi-meta {font-size:25px; text-align: center; direction:rtl; margin-top:0;}
 .testimonials .section-title {margin-bottom:20px;}
 
+.sidebar {
+	position: fixed;
+    top: 51px;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+    display: block;
+    padding: 20px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    background-color: #f5f5f5;
+    border-right: 1px solid #eee;
+}
+}
+
+
+
 @media (max-width: 768px) {
 	.productslist {margin-bottom: 20px;}
 	.service-widget {padding:0 15px;}
