--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -145,14 +145,11 @@ h4.modal-title {position: static; padding:0;}
 .testimonials .section-title {margin-bottom:20px;}
 
 .sidebar {
-	position: fixed;
-    z-index: 1000;
-    display: block;
     padding: 20px;
     overflow-x: hidden;
     overflow-y: auto;
     background-color: #f5f5f5;
-    border-right: 1px solid #eee;
+    border-left: 1px solid #eee;
 }
 }
 
