--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -149,7 +149,7 @@ h4.modal-title {position: static; padding:0;}
     overflow-x: hidden;
     overflow-y: auto;
 	bottom:0;
-    background-color: #fff;
+    background-color: #FBFAFB;
     border-left: 1px solid #eee;
 }
 }
