--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -152,7 +152,7 @@ h4.modal-title {position: static; padding:0;}
     background-color: #FBFAFB;
     border-left: 1px solid #eee;
 }
-.nav>li.active>a {background:#fff}
+.nav>li.active>a {background:#fff; border:1px solid #eee}
 
 
 @media (max-width: 768px) {
