--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -152,6 +152,7 @@ h4.modal-title {position: static; padding:0;}
     background-color: #FBFAFB;
     border-left: 1px solid #eee;
 }
+.nav>li {margin-bottom:2px}
 .nav>li.active>a {background:#fff; border:1px solid #eee}
 
 
