--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -149,9 +149,14 @@ h4.modal-title {position: static; padding:0;}
     overflow-x: hidden;
     overflow-y: auto;
 	bottom:0;
-    background-color: #FBFAFB;
     border-left: 1px solid #eee;
 }
+
+.sidebar .sidebarelement {
+	background-color: #FBFAFB;	
+}
+
+
 .nav>li {margin-bottom:2px}
 .nav>li.active>a {background:#fff; border:1px solid #eee}
 
