--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -168,7 +168,7 @@ h4.modal-title {position: static; padding:0;}
 .f1-progress { position: absolute; top: 24px; right: 0; width: 100%; height: 1px; background: #ddd; }
 .f1-progress-line { position: absolute; top: 0; right: 0; height: 1px; background: #f35b3f; }
 
-.f1-step { position: relative; float: right; width: 25%; padding: 0 5px; }
+.f1-step { position: relative; float: right; width: 25%; padding: 0 5px; text-align:center; }
 
 .f1-step-icon {
 	display: inline-block; width: 40px; height: 40px; margin-top: 4px; background: #ddd;
