--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -163,7 +163,7 @@ h4.modal-title {position: static; padding:0;}
 
 .service-widget {box-shadow: none; webkit-box-shadow: none}
 
-.f1-steps { overflow: hidden; position: relative; margin-top: 20px; direction:rtl}
+.f1-steps { overflow: hidden; position: relative; margin-top: 20px; direction:rtl; margin-bottom:20px;}
 
 .f1-progress { position: absolute; top: 24px; right: 0; width: 100%; height: 1px; background: #ddd; }
 .f1-progress-line { position: absolute; top: 0; right: 0; height: 1px; background: #f35b3f; }
