--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -166,7 +166,7 @@ h4.modal-title {position: static; padding:0;}
 .f1-steps { overflow: hidden; position: relative; margin-top: 20px; direction:rtl; margin-bottom:20px;}
 
 .f1-progress { position: absolute; top: 24px; right: 0; width: 100%; height: 1px; background: #ddd; }
-.f1-progress-line { position: absolute; top: 0; right: 0; height: 1px; background: #f35b3f; }
+.f1-progress-line { position: absolute; top: 0; right: 0; height: 1px; background: #6B749D; }
 
 .f1-step { position: relative; float: right; width: 25%; padding: 0 5px; text-align:center; }
 
@@ -176,15 +176,15 @@ h4.modal-title {position: static; padding:0;}
 	-moz-border-radius: 50%; -webkit-border-radius: 50%; border-radius: 50%; text-align:center;
 }
 .f1-step.activated .f1-step-icon {
-	background: #fff; border: 1px solid #f35b3f; color: #f35b3f; line-height: 38px;
+	background: #fff; border: 1px solid #6B749D; color: #6B749D; line-height: 38px;
 }
 .f1-step.active .f1-step-icon {
-	width: 48px; height: 48px; margin-top: 0; background: #f35b3f; font-size: 22px; line-height: 48px;
+	width: 48px; height: 48px; margin-top: 0; background: #6B749D; font-size: 22px; line-height: 48px;
 }
 
 .f1-step p { color: #ccc; }
-.f1-step.activated p { color: #f35b3f; }
-.f1-step.active p { color: #f35b3f; }
+.f1-step.activated p { color: #6B749D; }
+.f1-step.active p { color: #6B749D; }
 
 
 
